[package]
name = "hCRIU"
version = "0.1.0"
edition = "2024"

[dependencies]
bytesize = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
comfy-table = "7.1.4"
dirs = "6.0.0"
humantime = "2.2.0"
procfs = "0.17.0"
rust-criu = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.8.22"
which = "7.0.3"
