[package]
name = "hCRIU"
version = "0.1.0"
edition = "2024"

[lib]
name = "hcriu"
path = "src/lib.rs"

[[bin]]
name = "hcriu"
path = "src/bin/cli.rs"

[[bin]]
name = "hcriu-ui"
path = "src/bin/tui.rs"


[dependencies]
bytesize = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
comfy-table = "7.1.4"
crossterm = "0.29.0"
dirs = "6.0.0"
humantime = "2.2.0"
procfs = "0.17.0"
ratatui = "0.29.0"
rust-criu = { git = "https://github.com/coffee0224/rust-criu"}
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.8.22"
which = "7.0.3"
